fix: blocks alignment

--- a/style.css
+++ b/style.css
@@ -5,8 +5,6 @@
 }
 
 body {
-    display: flex;
-    flex-wrap: wrap;
     overflow-x: hidden;
     font-family: 'Baloo Bhaina 2', cursive;
 }
